# portal

./: .env  .forestadmin-schema.json  .gitignore  1.txt  CONTRIBUTING.md  README.md  configs.txt  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requiremenst.txt  requirements.txt  setup.cfg  usefull_commands.txt
api/: admin.py  models.py
api/migrations/: 0001_initial.py  0002_alter_news_source_id_alter_post_source_id.py
app/: admin.py  models.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_alter_interest_name_alter_interest_slug_and_more.py  0002_alter_interest_slug_alter_skill_slug.py  0003_post.py  0004_delete_post.py
app/templates/: base.html
archives/owren/: category.html
authentication/: admin.py  models.py  test.py
authentication/migrations/: 0001_initial.py  0002_profile.py  0002_rename_articles_news.py  0003_profile_interests_profile_skills.py  0003_remove_news_third_image_post_third_image_and_more.py  0004_alter_post_body_alter_post_description_and_more.py  0004_alter_profile_interests_alter_profile_skills.py  0005_alter_comment_text_alter_news_body_alter_post_body.py  0006_post.py  0007_comment.py  (+6 more)
backend/: .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.cfg
backend/owren/: asgi.py  configurations.py  utils.py  wsgi.py
backend/owren/settings/: development.py  production.py
backend/parser/: dat.py  habr_parser.py  tproger_parser.py  utils.py
frontend/: package-lock.json
main/: admin.py  models.py
owren/: asgi.py  configurations.py  settings.py  urls.py  wsgi.py
owrencms/: Dockerfile  manage.py
parser/: dev_parser.py  habr_data2023-02-28_15-30-18.csv  habr_parser.py  tproger_parser.py  utils.py
(+65 files in other folders)
